Update 03. Dimensional Analysis by Covariance.md

--- a/notes/Intelligent-data-analysis/03. Dimensional Analysis by Covariance.md
+++ b/notes/Intelligent-data-analysis/03. Dimensional Analysis by Covariance.md
@@ -5,7 +5,7 @@ This lecture explores the mathematical and conceptual frameworks underlying poin
 ---
 
 ## 1. Point Cloud and Euclidean Spaces
-<img src="https://images.ctfassets.net/26961o1141cc/1ntbH068mqsmzD1v7P69hy/d6a023bdc9027478dca19a2b49c66b82/p6.png?w=2400&h=1000&fm=webp&q=100" alt="Point Cloud" width="800">
+<img src="https://images.ctfassets.net/26961o1141cc/1ntbH068mqsmzD1v7P69hy/d6a023bdc9027478dca19a2b49c66b82/p6.png?w=2400&h=1000&fm=webp&q=100" alt="Point Cloud" width="400">
 
 ### 1.1 What is a Point Cloud?
 
@@ -56,28 +56,16 @@ A **Euclidean space** (or Cartesian space) is a finite-dimensional metric vector
 Point clouds are often visualized in 2D or 3D using **scatterplots**, where each axis corresponds to a variable.
 
 #### Characteristics of Scatterplots:
-1. **Variable Representation**:
-   - Each axis typically represents a different variable.
+1. **Variable Representation**: Each axis typically represents a different variable.
 
-2. **Trend Lines**:
-   - Often, scatterplots include trend lines to represent assumed patterns in the data.
+2. **Trend Lines**: Often, scatterplots include trend lines to represent assumed patterns in the data.
 
-3. **Dispersion Indicators**:
-   - Elements like **standard deviation** or **confidence intervals** show the spread of data around the trend line.
+3. **Dispersion Indicators**: Elements like **standard deviation** or **confidence intervals** show the spread of data around the trend line.
 
----
-
-#### A trend line does not imply:
-- A definitive relationship between variables.
-- That the represented trend is optimal.
-- That the trend is a good fit.
-
----
-
-#### Example:
-Imagine a scatterplot of height (x-axis) and weight (y-axis) for a group of people:
-- A **trend line** might indicate a general positive relationship (taller people tend to weigh more).
-- **Dispersion indicators** could show the variability of weight for people of the same height.
+> *Note*: A trend line does not imply:
+> - A definitive relationship between variables.
+> - That the represented trend is optimal.
+> - That the trend is a good fit.
 
 ---
 
@@ -138,57 +126,9 @@ Where:
 εᵢ = Yᵢ - E[Y]
 ```
 
-  
-> **Note on Notation:**  
-> - Standard form: `y = β₁x + β₀`.
-> - General form: `ax + by + c = 0` (useful for viewing point clouds as surfaces).
-
 ---
 
-### 2.3 Matrix Representation
-
-When dealing with multiple variables and observations, linear regression is often expressed in matrix form:
-```text
-Y = Xβ + ε
-```
-
-#### Components:
-- `Y`: Vector of dependent variable observations.
-- `X`: Design matrix containing independent variable values.
-- `β`: Coefficient vector (parameters to be estimated).
-- `ε`: Error term vector.
-
-For example, with `n` observations and `j` independent variables:
-```text
-Y = [            X = [                      β = [              ε = [
-  Y₁               X₁j ... X₁₁ 1              βj                 εj
-  Y₂               X₂j ... X₂₁ 1              ...                ε₁
-  ...              ...                        β₁                 ...
-  Yn               Xnj ... Xn₁ 1              β₀                 εn
-]                ]                            ]                 ]
-```
-
-#### Solving the System:
-The solution using **Ordinary Least Squares (OLS)** is:
-```text
-β̂ = (XᵀX)⁻¹XᵀY
-```
-This is known as the **normal equations**.
-
-#### Practical Considerations:
-- Ensure proper assumptions are met (e.g., noise independence, error normality).
-- Avoid overfitting, especially in multiple regression, by carefully selecting predictors.
-
-#### Example:
-For predicting house prices based on square footage (`x₁`) and number of bedrooms (`x₂`):
-```text
-Y = β₁x₁ + β₂x₂ + β₀ + ε
-```
-The coefficients `β₁`, `β₂`, and `β₀` are estimated using the OLS method.
-
----
-
-### 2.4 Residuals
+### 2.3 Residuals
 <img src="https://www.statology.org/wp-content/uploads/2020/12/residuals2.png" alt="Residuals" width="400">  
 
 #### Definition:
@@ -224,9 +164,8 @@ eᵢ = $320,000 - $300,000 = $20,000
 ## 3. Correlation analysis
 <img src="https://www.simplypsychology.org/wp-content/uploads/correlation.jpg" alt="Correlation" width="400">  
 
-As previously discussed, **correlation analysis** focuses on summarizing the strength of the relationship between variables. Covariance, however, offers a different perspective by measuring **co-dispersion**: how much two variables fluctuate together.
+As previously discussed, **correlation analysis** measures the strength and direction of the linear relationship between two variables on a standardized scale (from -1 to 1). In contrast, **covariance** measures the direction and degree of joint variability between two variables, but it is not standardized — its value depends on the scale of the data.
 
----
 
 ### 3.1 Dispersion 
 <img src="https://media.geeksforgeeks.org/wp-content/uploads/20230810105933/measure-of-depression.png" alt="Dispersion" width="400">  
@@ -251,36 +190,24 @@ For multiple variables, **covariance** is a logical extension of dispersion, ass
 ### 3.2 What is Covariance?
 <img src="https://www.statisticshowto.com/wp-content/uploads/2024/06/covariance.png" alt="Covariance" width="400">  
 
-**Covariance** measures the extent to which two variables co-fluctuate. It quantifies the degree of *joint variation* between them. The mathematical definition is:
-```text
-σₓᵧ = E[(X - E[X])(Y - E[Y])]
-```
+**Covariance** measures the extent to which two variables co-fluctuate. It quantifies the degree of *joint variation* between them. The formula for the covariance between two variables $X$ and $Y$ is:
 
-#### Intuition:
-- When two variables tend to move together (both increase or decrease simultaneously), their covariance is **positive**.
-- When one variable increases while the other decreases, the covariance is **negative**.
+$$
+\text{Cov}(X, Y) = \frac{1}{n} \sum_{i=1}^{n} (X_i - \bar{X})(Y_i - \bar{Y})
+$$
 
-#### Example:
-Suppose `X` represents the hours studied and `Y` represents test scores:
-- If more study hours generally result in higher test scores, `σₓᵧ > 0`.
-- If more study hours lead to lower test scores (unusual but possible), `σₓᵧ < 0`.
+where:
+- $n$: Number of data points (samples)
+- $X_i$: The $i$-th observation of variable $X$
+- $\bar{X}$: Mean (average) of variable $X$
+- $Y_i$: The $i$-th observation of variable $Y$
+- $\bar{Y}$: Mean (average) of variable $Y$
 
----
-
-### 3.3 Sample Estimator
-
-For a sample, covariance is estimated using the following formula:
-```text
-sₓᵧ = (1 / (n - 1)) Σ[(xᵢ - x̄)(yᵢ - ȳ)]
-```
-Where:
-- `xᵢ`, `yᵢ`: Individual sample points for variables `X` and `Y`.
-- `x̄`, `ȳ`: Sample means of `X` and `Y`.
-- `n`: Number of observations.
 
 ---
 
-### 3.4 Properties of Covariance
+
+### 3.3 Properties of Covariance
 
 1. **Positive Covariance** (`sₓᵧ > 0`):
    - Indicates that as one variable increases, the other tends to increase as well.
@@ -296,20 +223,14 @@ Where:
      sₓₓ = (1 / (n - 1)) Σ[(xᵢ - x̄)²]
      ```
      
----
-
-### 3.5 Limitations of Covariance
-
-1. **Dependency on Scale**:
-   - Covariance depends on the units of measurement, making it unsuitable for comparing relationships across different datasets.
-   - **Solution**: Normalize using correlation coefficients (e.g., Pearson's correlation coefficient).
-
-2. **Magnitude Misinterpretation**:
-   - A larger covariance does not necessarily imply a stronger relationship, as it is not normalized.
+> Limitations of Covariance:
+> - Covariance depends on the units of measurement, making it unsuitable for comparing relationships across different datasets.
+>   - **Solution**: Normalize using correlation coefficients (e.g., Pearson's correlation coefficient).
+> - A larger covariance does not necessarily imply a stronger relationship, as it is not normalized.
 
 ---
 
-### 3.6 Applications of Covariance
+### 3.4 Applications of Covariance
 
 1. **Correlation Analysis**:
    - Covariance forms the basis of correlation, which normalizes it to provide a measure of association between variables.
@@ -523,7 +444,7 @@ Cov(X') = X'(X')ᵀ / (n - 1)
 ```
 Where (X')ᵀ is the transpose.
 
-> The transpose of a matrix just means fliping rows and columns.
+> The transpose of a matrix means flipping rows and columns.
 
 #### Step 3: Perform Eigendecomposition or SVD
 - Compute the eigenvalues and eigenvectors of the covariance matrix.
@@ -578,14 +499,7 @@ Normalize the eigenvalues to compute the proportion of explained variance:
 #### Interpretation:
 The dataset effectively lies on a **2D plane** within the 3D space, reducing the need to analyze the data in 3 dimensions.
 
----
 
 ### 6.3 Dimensionality Reduction with PCA
 
 Dimensionality reduction is achieved by discarding eigenvectors associated with smaller eigenvalues. These eigenvectors contribute minimally to the total variance.
-
-### Filtering in PCA Space:
-Filtering in the PCA or cMDS space is analogous to filtering in Fourier space:
-- **Low-pass filter**: Set coefficients of eigenvectors with lower eigenvalues to zero, then reconstruct the data.
-- **High-pass filter**: Set coefficients of eigenvectors with higher eigenvalues to zero, then reconstruct.
-- **Band-pass and band-rejection filters**: Set coefficients of extreme or middle eigenvectors to zero, respectively, and reconstruct.
