Update 03. Dimensional Analysis by Covariance.md

--- a/notes/Intelligent-data-analysis/03. Dimensional Analysis by Covariance.md
+++ b/notes/Intelligent-data-analysis/03. Dimensional Analysis by Covariance.md
@@ -193,7 +193,7 @@ For multiple variables, **covariance** is a logical extension of dispersion, ass
 **Covariance** measures the extent to which two variables co-fluctuate. It quantifies the degree of *joint variation* between them. The formula for the covariance between two variables $X$ and $Y$ is:
 
 $$
-\text{Cov}(X, Y) = \frac{1}{n} \sum_{i=1}^{n} (X_i - \bar{X})(Y_i - \bar{Y})
+sₓᵧ  = \frac{1}{n-1} \sum_{i=1}^{n} (X_i - \bar{X})(Y_i - \bar{Y})
 $$
 
 where:
