Update 06-10. Graph & Network Analysis — Exam Cheat-Sheet.md

--- a/notes/Intelligent-data-analysis/06-10. Graph & Network Analysis — Exam Cheat-Sheet.md
+++ b/notes/Intelligent-data-analysis/06-10. Graph & Network Analysis — Exam Cheat-Sheet.md
@@ -166,8 +166,8 @@ $$
 - **Community (intuitive)**: subset of nodes with denser internal links than external ones.
 
 ### Formal community definitions
-- **Strong community**: subgraph $V_c$ where $\forall v\in V_c:\; \deg_{V_c}(v) > \deg_{\lnot V_c}(v)$.
-- **Weak community**: subgraph $V_c$ where $\sum_{v\in V_c} \deg_{V_c}(v) > \sum_{v\in V_c} \deg_{\lnot V_c}(v)$.
+- **Strong community**: subgraph $V_c$ where $\forall v\in V_c:\; \deg_{V_c}(v) > \deg_{\lnot V_c}(v)$. (Every member is more connected inside than outside)
+- **Weak community**: subgraph $V_c$ where $\sum_{v\in V_c} \deg_{V_c}(v) > \sum_{v\in V_c} \deg_{\lnot V_c}(v)$. (The group as a whole has more internal than external links, but individuals may not)
     - Every strong community is also weak, but not vice‑versa.
 
 ### Connectivity groundwork
