Update 06-10. Graph & Network Analysis — Exam Cheat-Sheet.md

--- a/notes/Intelligent-data-analysis/06-10. Graph & Network Analysis — Exam Cheat-Sheet.md
+++ b/notes/Intelligent-data-analysis/06-10. Graph & Network Analysis — Exam Cheat-Sheet.md
@@ -244,20 +244,47 @@ $$
 ### 1- Louvain algorithm (fast unfolding)
 <img src="https://miro.medium.com/v2/resize:fit:1400/1*iXJYk4DOM7JQ6o486kCIcg.png" alt="Louvain" width="400">
 
-1. **Phase 1** – locally move each node to the neighbour community that yields highest positive $\Delta Q$; repeat until no gain.
-2. **Phase 2** – collapse each community into a meta‑node, sum edge weights between them (self‑loops allowed).
-3. Re‑apply Phase 1 on the reduced graph; iterate until $Q$ saturates.
+
+1. **Initialize**
+   - Assign each node to its own community.
+
+2. **Local Moving Phase**
+   - For each node, consider moving it to the community of each of its neighbors.
+   - Move the node to the community that gives the largest increase in modularity (if any).
+   - Repeat until no node can be moved to increase modularity.
+
+3. **Aggregation Phase**
+   - Build a new network where each community becomes a single meta-node (meta-community).
+   - The weights of the links between meta-nodes are the sum of the links between original communities.
+
+4. **Repeat**
+   - Apply the local moving phase and aggregation phase on the new network.
+   - Continue until modularity can no longer be increased.
+
+5. **Output**
+   - The final partitioning of nodes into communities at the highest modularity.
+
+**In short:**  
+Local moving of nodes to optimize modularity → Group nodes into meta-communities → Repeat until stable.
+
+
 **Pros**: scalable (≈ linear), reuses $\Delta Q$ updates.
 **Cons**: result depends on node order; may get stuck in local maxima.
 
 ### 2- Girvan–Newman algorithm
 <img src="https://miro.medium.com/v2/resize:fit:588/0*3_MOnmFqU3CfMhMn.png" alt="Girvan–Newman" width="400">
 
-1. Compute **edge betweenness centrality** for all edges.
-2. Remove edge(s) with highest betweenness.
-3. Recalculate betweenness on the residual graph.
-4. Repeat until no edges remain, recording component splits → produces top‑down dendrogram.
+
+1. For every edge, calculate **edge betweenness centrality** (number of shortest paths passing through each edge).
+2. Remove the edge(s) with the highest betweenness.
+3. Recalculate betweenness for the remaining edges.
+4. Repeat steps 2-3 until no edges remain or until desired number of communities is found.
+5. The algorithm produces a dendrogram (tree) showing how the network splits into communities as bridges are removed.
+
 Variants: remove all max‑betweenness edges at once (faster) or one at a time (easier to follow).
+
+**Key point:**  
+Edges with high betweenness act as bridges between communities. Removing them reveals the underlying clusters.
 
 ---
 
