Update 02. Cooperative AI.md

--- a/notes/Intelligent-interactive-systems/02. Cooperative AI.md
+++ b/notes/Intelligent-interactive-systems/02. Cooperative AI.md
@@ -1,17 +1,10 @@
-# Cooperative AI: A Consolidated Overview
+# Cooperative AI
 
 [Listen to the AI-generated overview podcast on this lecture!](https://notebooklm.google.com/notebook/28ab6f91-f4d2-46d9-a9b1-3a4a4dc44cb0/audio)
 
-We shall bring together and organize the key ideas from source documents covering:
-
-1. **Cooperation**  
-2. **Cooperative AI: machines must learn to find common ground**  
-
-Throughout, you will find references to important concepts, examples, and recommended practices.
-
 
 ## 1. The Value of Real-World Cooperation
-<img src="https://penntoday.upenn.edu/sites/default/files/2022-02/Plotkin-cooperation-social.jpeg" alt="Cooperation" width="800">
+<img src="https://penntoday.upenn.edu/sites/default/files/2022-02/Plotkin-cooperation-social.jpeg" alt="Cooperation" width="400">
 
 ### Everyday Examples of Cooperation
 - **Traffic and Pedestrians**: Drivers yield to pedestrians in crosswalks to prevent accidents. Pedestrians, in turn, follow signals so vehicles can proceed without constant stops.  
@@ -39,7 +32,7 @@ Throughout, you will find references to important concepts, examples, and recomm
 - **Game of Chicken**  
   - Two drivers head toward each other; each wants the other to swerve first.  
   - If neither swerves, they crash—showing how stubbornness can yield disastrous results.
-<img src="https://blogs.cornell.edu/info2040/files/2022/11/Blogpost2Fig1.png" alt="Chicken" width="400">
+<img src="https://behaviouraleconomics.jasoncollins.blog/game-theory/img/chicken-1.jpg" alt="Chicken" width="400">
 
 - **Hawk/Dove**  
   - Players choose aggressive (“hawk”) or peaceful (“dove”) strategies over a shared resource.  
@@ -129,7 +122,7 @@ Throughout, you will find references to important concepts, examples, and recomm
 ---
 
 ## 7. Interdisciplinary Collaboration
-<img src="https://familylaw.hofstra.edu/wp-content/uploads/2018/03/siben-lecture1200x600_b.jpg" alt="Collaboration" width="400">
+
 
 ### Why It’s Needed
 - Cooperation includes **legal, psychological, economic, and cultural dimensions**.
@@ -178,16 +171,5 @@ These must address real-world complexities (e.g., uncertainty, partial info) and
 - **Support Cooperative AI Initiatives**: Funding, conferences, and prizes.  
 - **Adopt Social Interventions**: Place AI within existing societal and regulatory frameworks.
 
----
-
-## 10. Conclusion
-
-Real-life cooperation—whether pedestrians sharing space with cars, nations addressing climate change, or people collaborating online—is crucial for societal progress. **Game theory** reveals why individual rationality can lead to suboptimal outcomes (e.g., Nash Equilibria) and how well-designed incentives improve cooperation.
-
-**Cooperative AI** extends these insights to a world where machines and humans must align to accomplish shared goals. By focusing on understanding, communication, commitment, and norms, Cooperative AI aims to produce outcomes that benefit everyone, whether human or AI.
-
-- **Robust benchmarks** will track genuine improvements in cooperation.
-- **Multidisciplinary efforts** ensure AI becomes deeply social rather than narrowly optimized.
-- **Ethical, legal, and institutional frameworks** guide AI toward stable, beneficial collaboration.
 
 > Ultimately, **cooperation** is about finding ways for everyone—human or AI—to succeed together, rather than at one another’s expense.
