Update 04. Supervised Learning.md

--- a/notes/Intelligent-interactive-systems/04. Supervised Learning.md
+++ b/notes/Intelligent-interactive-systems/04. Supervised Learning.md
@@ -64,7 +64,7 @@ Neural networks come in many shapes. Picking the wrong one is like hammering in 
 > Use for images, video frames, or even text arranged as a “pixel map”.
 
 ### 3.2 Recurrent Neural Networks (RNNs) — *remembering sequences*
-<img src="https://i0.wp.com/developersbreach.com/wp-content/uploads/2020/08/cnn_banner.png?fit=1024%2C481&ssl=1" alt="RNN" width="400">
+<img src="https://dataaspirant.com/wp-content/uploads/2020/11/3-Recurrent-Neural-Network-1024x758.png" alt="RNN" width="400">
 
 - Pass a hidden state from step to step so earlier words influence later ones.  
 - Trained by **Back‑propagation Through Time (BPTT)**.
