Update 09. Reinforcement Learning.md

--- a/notes/Intelligent-interactive-systems/09. Reinforcement Learning.md
+++ b/notes/Intelligent-interactive-systems/09. Reinforcement Learning.md
@@ -27,7 +27,7 @@ Bottom line: RL turns volatility into algorithmic competitive advantage.
 ## 3. Core Ingredients — A Shared Vocabulary
 > *Building the language:* before we juggle equations, let’s agree on names for the pieces we’ll keep rearranging. Note we have already covered most of them last week.
 
-<img src="https://it.mathworks.com/help/deeplearning/ug/reinforcement_learning_diagram.png" alt="RL" width="400">
+<img src="https://www.ibm.com/content/dam/connectedassets-adobe-cms/worldwide-content/creative-assets/s-migr/ul/g/8f/5e/reinforcement-learning-figure-1.png" alt="RL" width="400">
 
 
 | Term | Technical Definition | Everyday Analogy |
@@ -58,10 +58,10 @@ Bottom line: RL turns volatility into algorithmic competitive advantage.
 5. **Repeat** until an episode ends, then start over.
 
 ```text
-┌────────────┐      action a        ┌───────────────────┐
+┌────────────┐      action a       ┌──────────────────────┐
 │   Agent    │ ──────────────────► │  Environment         │
-│            │ ◄────────────────── │  state s′, reward r
-└────────────┘   observation
+│            │ ◄────────────────── │  state s′, reward r  │
+└────────────┘   observation       └──────────────────────┘
 ```
 
 ---
