Update 03. Evolutionary Algorithms.md

--- a/notes/Evolutionary-computation/03. Evolutionary Algorithms.md
+++ b/notes/Evolutionary-computation/03. Evolutionary Algorithms.md
@@ -262,6 +262,10 @@ Randomly selects a parent with probability $p_m$ and modifies a gene.
 **Types of Mutation:**
 1. **Uniform Mutation**:
    - A gene $c_i$ is replaced with a random (uniform) value $c_i'$ within its allowed range $x_i ∈ [u_i, v_i]$.
+     
+> **Example:**    
+> Gene value: $c_i = 7.2$ in range [0, 10]    
+> After mutation: randomly pick, say $c_i' = 3.8$
 
 2. **Gaussian Mutation**:
    - A gene $c_i$ is replaced with $c_i'$ by adding Gaussian noise.
@@ -269,6 +273,10 @@ Randomly selects a parent with probability $p_m$ and modifies a gene.
    - Where $N(c_i, \sigma_i)$ is a Gaussian distributuion with mean $c_i$ and standard deviation $\sigma_i$.
    - $u_i$ and $v_i$ are the lower and upper bounds of the variable, ensuring the mutation stays within valid limits.
    - The standard deviation $\sigma_i$ determines the spread of the mutation. Typically set as $\sigma_i = 1/10 l_i$ where $l_i = v_i - u_i$ is the length of the variable's allowed range. The Larger the $\sigma_i$, the bigger the changes.
+     
+> **Example:**      
+> $c_i = 7.2$, $\sigma_i = 0.5$    
+> Draw, say $c_i' = 7.45$    
 
 3. **Non-Uniform Mutation**:
    - Mutation strength decreases over generations.
@@ -284,7 +292,10 @@ Randomly selects a parent with probability $p_m$ and modifies a gene.
 - Where t is the number of current generation and $\tau$ is a random number in the range [0,1] deciding whether the mutation increases or decreases $c_i$ and $\Delta(t, y) = y (1 - r^{(1 - \frac{t}{g_m})^b})$ determines how much mutation occurs
 
 - Where r is a random number in the range of [0,1], and $g_m$ is the maximum number of generations and b is a constant controlling the mutation rate.
-
+  
+> **Example:**      
+> $c_i = 7.2$, $[u_i, v_i]=[0,10]$, $t=10$, $g_m=100$, $b=2$      
+> $\Delta \approx 1.756$, so $c_i' = 8.956$   
 ---
 
 #### Crossover
@@ -296,6 +307,9 @@ Combines genetic material from two parents to create offspring.
    - Offspring genes are randomly selected within the range of parent values.
    - $h_i \in [x_i^{(1)}, x_i^{(2)}]$ or $h_i \in [x_i^{(2)}, x_i^{(1)}]$
    - **Intuition:** This allows uniform sampling within the range of the two parents, ensuring diversity in offspring.
+   -  **Example:**  
+      - Parent 1: [3.0, 5.5, 7.1], Parent 2: [4.4, 2.0, 8.0]
+      - Offspring: [3.9 (random in [3,4.4]), 4.2, 7.7]
 
 2. **Simple Crossover**:
    - Selects a random crossover point and swaps genes beyond that point.
@@ -312,22 +326,30 @@ Combines genetic material from two parents to create offspring.
      $h_i^{(2)} = \alpha x_i^{(2)} + (1 - \alpha) x_i^{(1)}$
    - $\alpha$ is a random value between 0 and 1.
    - **Intuition:** This creates offspring that are a weighted average of the parents, which helps in smooth interpolation of solutions.
+   - **Example:**  
+      - P1: [2,4], P2: [6,1], $\alpha=0.3$ $\rightarrow$ O1: [4.8,1.9], O2: [3.2,3.1]
 
 4. **Local Arithmetic Crossover**:    
     - Works like whole arithmetic crossover, but 𝛼 is a vector instead of a scalar.
     - Each gene in the offspring gets a different random weight.
     - **Intuition:** Provides more fine-grained control over crossover, allowing some genes to be more influenced by one parent than others.
+    - **Example:**  
+      - P1: [5,7,2], P2: [3,4,8], $\alpha$=[0.8,0.1,0.6] $\rightarrow$ O1: [4.6,4.3,4.4]
     
 5. **Single Arithmetic Crossover**:     
     - A single gene (feature) is chosen and replaced by the arithmetic mean of that gene from both parents.
   All other genes remain the same.
     - **Intuition:** Introduces a small, controlled variation in offspring, ensuring similarity to parents but with slight improvement.
+    - **Example:**  
+      - P1: [10,20,30], P2: [40,50,60]; gene 2 chosen $\rightarrow$ O: [10,35,30]
 
 7. **BLX- $\alpha$ Crossover**:
    - Offspring gene is sampled from a broader range than parents.
    - $h_i \in [h_{\min} - I \cdot \alpha, h_{\max} + I \cdot \alpha]$
      - $h_{\min}$ and $h_{\max}$ are min and max values among parents.
    - **Intuition:** Extends the search space beyond the parents' range, allowing more exploration and potentially better solutions.
+   - **Example:**  
+      - P1: [5], P2: [9], $\alpha=0.5$ $\rightarrow$ range: [3,11]; O: [10] (random in range)
 
 ---
 
